fixed formatting in TECHNICALDEBT.md for better readability, updated content/styling in Nav, PageHeader, PageNav components

--- a/main/src/components/PageHeader.css
+++ b/main/src/components/PageHeader.css
@@ -1,3 +1,4 @@
 .PageHeader {
   background-color: rgb(245, 247, 249);
+  text-align: center;
 }
